platform/policies/tests/require-signed-images/pod-signed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-pod-v2
spec:
  containers:
    - name: app
      image: localhost:5555/test/signed-v2:v1
