platform/policies/tests/require-signed-images/pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-pod
spec:
  containers:
    - name: app
      image: localhost:5555/test/unsigned-app:v1
